IPTV/deploymentSystem/Scripts/iptables
# Generated by iptables-save v1.4.21 on Tue Oct 17 08:35:47 2017
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20:3260]
# 允许连接跟踪表
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Company public network export
-A INPUT -s 221.239.96.186/32 -j ACCEPT
-A INPUT -s 218.69.8.142/32 -j ACCEPT
-A INPUT -s 111.30.65.64/29 -j ACCEPT
-A INPUT -s 111.164.118.46/32 -j ACCEPT
# jump server
-A INPUT -s 10.0.9.152/32 -j ACCEPT
# zabbix proxy
-A INPUT -s 10.0.13.251/32 -j ACCEPT
# 设备所在网段，注意修改为当前网段
-A INPUT -s XX.XX.XX.XX/XX -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

# 以下配置为公司办公楼内的内网设备需要额外添加的配置
#运维部办公电脑的IP
-A INPUT -s 192.168.19.64/27 -j ACCEPT
# 拨VPN以后，获得地址
-A INPUT -s 192.168.14.0/28 -j ACCEPT
# SNMP监听的UDP端口欧
-A INPUT -p udp -m udp --dport 161 -j ACCEPT
COMMIT
# Completed on Tue Oct 17 08:35:47 2017
